--- a/restaurant.html
+++ b/restaurant.html
@@ -2,10 +2,26 @@
 <html>
 <head>
 	<title>Piggle's Pizza Joint</title>
+	<link href="css/restaurant.css" type="text/css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
 </head>
 <body>
+<div class="pigglemaster">
 
-<h1>Welcome to the Official Piggle's Pizza Joint Website</h1>
+<h1>Piggle's Pizza Joint</h1>
 
+<div>
+<img src=images/Pizza.jpg width="500" height="500">
+</div>
+
+<div>
+<p class="one">Menu</p>
+
+<p class="two">About Us</p>
+
+<p class="three">Reservations</p>
+</div>
+
+</div>
 </body>
 </html>
