--- a/corner.html
+++ b/corner.html
@@ -8,11 +8,11 @@
 <body>
 <h1>I sure hope this works</h1>
 
-<p class="one"><a href=""> Boom </a></p>
+<a href=""><p class="one"> Boom </p></a>
 
-<p class="two"><a href="">Bam</a></p>
+<p class="two"><a href=""> Bam </a></p>
 
-<p class="three"><a href="">Bap</a></p>
+<p class="three"><a href=""> Bap </a></p>
 
 
 </body>
