--- a/restaurant.html
+++ b/restaurant.html
@@ -15,11 +15,11 @@
 </div>
 
 <div>
-<p class="one">Menu</p>
+<a href="menu.html"><p class="one">Menu</p></a>
 
-<p class="two">About Us</p>
+<a href="aboutus.html"><p class="two">About Us</p></a>
 
-<p class="three">Reservations</p>
+<a href="reservations.html"><p class="three">Reservations</p></a>
 </div>
 
 </div>
