--- a/corner.html
+++ b/corner.html
@@ -6,13 +6,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
 </head>
 <body>
+
+
 <h1>I sure hope this works</h1>
 
 <a href=""><p class="one"> Boom </p></a>
 
-<p class="two"><a href=""> Bam </a></p>
+<a href=""><p class="two"> Bam </p></a>
 
-<p class="three"><a href=""> Bap </a></p>
+<a href=""><p class="three"> Bap</p></a>
 
 
 </body>
