--- a/restaurant.html
+++ b/restaurant.html
@@ -8,19 +8,26 @@
 <body>
 <div class="pigglemaster">
 
-<h1>Piggle's Pizza Joint</h1>
+<h1 class="pigglehead">Piggle's Pizza Joint</h1>
 
 <div>
 <img src=images/Pizza.jpg width="500" height="500">
 </div>
 
-<div>
-<a href="menu.html"><p class="one">Menu</p></a>
 
-<a href="aboutus.html"><p class="two">About Us</p></a>
-
-<a href="reservations.html"><p class="three">Reservations</p></a>
+<div class="box">
+<a href="menu.html"><p class="one">Menu<img class="img1" src="images/pepper.jpg"></p></a>
 </div>
+
+<div class="box2">
+<a href="aboutus.html"><p class="two">About Us<img class="img2" src="images/aboutus.jpg"></p></a>
+</div>
+
+<div class="box3">
+<a href="https://www.google.com/maps/place/Mojave+Desert/@35.0110087,-115.4739988,17z/data=!4m5!3m4!1s0x80cf61476bd798cf:0xca4c53e5430da34!8m2!3d35.0109911!4d-115.4733551"><p class="three">Find us on Google Maps!<img class="img3" src="images/findus.jpg"></p></a>
+</div>
+
+
 
 </div>
 </body>
