--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Nick's Website</title>
+	<title>Nick's Websites</title>
+	<link href="css/Index.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
 </head>
 <body>
-This is the new website.
+
+<h1>This is a storage space for all of my websites</h1>
+
+<div class="row">
+<div class="col-lg-4 col-md-6"><a href="Website (1st Project).html"><p>About Me Page</p></a></div>
+
+<div class="col-lg-4 col-md-6"><a href="Restaurant.html"><p>Restaurant</p></a></div>
+
+<div class="col-lg-4 col-md-6"><p>Class Demos:</p>
+<list>
+<a href="corners.html"<li>corners</li></a>
+<li>thing1</li>
+<li>thing2</li>
+<li>thing3</li>
+</list>
+</div>
+</div>
+
+
+
 </body>
 </html>
