--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
 <div class="row">
 <div class="col-lg-4 col-md-6"><a href="Website (1st Project).html"><p>About Me Page</p></a></div>
 
-<div class="col-lg-4 col-md-6"><a href="Restaurant.html"><p>Restaurant</p></a></div>
+<div class="col-lg-4 col-md-6"><a href="restaurant.html"><p>Restaurant</p></a></div>
 
 <div class="col-lg-4 col-md-6"><p>Class Demos:</p>
 <list>
-<a href="corners.html"<li>corners</li></a>
+<a href="corner.html"<li>corners</li></a>
 <li>thing1</li>
 <li>thing2</li>
 <li>thing3</li>
