--- a/menu.html
+++ b/menu.html
@@ -9,35 +9,21 @@
 
 <h1>Menu</h1>
 
-<div class="col-lg-4 col-md-6 col-sm-3"><div class="h2"><h2>Appetizers</h2>
+<div class="col-lg-2 col-md-6 col-sm-3 h2"><h2>Appetizers</h2>
 <li>$13. Breadsticks</li>
 <li>$18. Chicken fingers</li>
 <li>$16. Garlic Bread</li></div>
 
-<div class="col-lg-4 col-md-6 col-sm-3"><div class="sloop"><h2>Dinner</h2>
+<div class="col-lg-2 col-md-6 col-sm-3 sloop"><h2>Dinner</h2>
 <li>$62. Artisan Cheese Pizza</li>
 <li>$57. Original Italian Pepperoni Pizza</li>
 <li>$97. Meat Lovers Pizza</li></div>
 
-<div class="col-lg-4 col-md-6 col-sm-3"><div class="doop"><h2>Dessert</h2>
+<div class="col-lg-2 col-md-6 col-sm-3 doop"><h2>Dessert</h2>
 <li>$89. Chocolate Cake</li>
 <li>$75. Vanilla Icecream</li>
 <li>$34. Cheesecake</li></div>
 
-<div class="col-lg-4 col-md-6 col-sm-3"><div class="pasta"><h2>Pasta</h2>
-<li>$90. Pasta Miguini</li>
-<li>$40. Pasta Sliguini</li>
-<li>$70. Pasta Marruchi</li></div>
-
-<div class="col-lg-4 col-md-6 col-sm-3"><div class="salads"><h2>Salads</h2>
-<li>$70. Caesar Salad </li>
-<li>$57. Slizzy Salad </li>
-<li>$68. Maruchii Salad</li></div>
-
-<div class="col-lg-4 col-md-6 col-sm-3"><div class="sandwiches"><h2>Sandwiches</h2>
-<li>$90. Garry Sandwhich </li>
-<li>$23. Eric Sandwhich </li>
-<li>$80. Armenia Sandwhich </li></div>
 
 </body>
 </html>
