--- a/Index.html
+++ b/Index.html
@@ -2,29 +2,27 @@
 <html>
 <head>
 	<title>Nick's Websites</title>
+	<meta name"viewport" content="width=device-width, initial-scale=1">
+	<link href="bootstraptemplate/css/bootstrap.css" rel="stylesheet">
 	<link href="css/Index.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
 </head>
 <body>
-
+<div class="container">
 <h1>This is a storage space for all of my websites</h1>
 
 <div class="row">
-<div class="col-lg-4 col-md-6"><a href="Website (1st Project).html"><p>About Me Page</p></a></div>
+<div class="col-lg-4 col-md-6 col-sm-3"><a href="Website (1st Project).html"><p>About Me Page</p></a></div>
 
-<div class="col-lg-4 col-md-6"><a href="restaurant.html"><p>Restaurant</p></a></div>
+<div class="col-lg-4 col-md-6 col-sm-3"><a href="restaurant.html"><p>Restaurant</p></a></div>
 
-<div class="col-lg-4 col-md-6"><p>Class Demos:</p>
+<div class="col-lg-4 col-md-6 col-sm-3"><p>Class Demos:</p>
 <list>
 <a href="corner.html"<li>corners</li></a>
-<li>thing1</li>
-<li>thing2</li>
-<li>thing3</li>
 </list>
 </div>
 </div>
-
+</div>
 
 
 </body>
