--- a/menu.html
+++ b/menu.html
@@ -24,6 +24,20 @@
 <li>$75. Vanilla Icecream</li>
 <li>$34. Cheesecake</li></div>
 
+<div class="col-lg-2 col-md-6 col-sm-3 pasta"><h2>Pasta</h2>
+<li>$90. Pasta Miguini</li>
+<li>$40. Pasta Sliguini</li>
+<li>$70. Pasta Marruchi</li></div>
+
+<div class="col-lg-2 col-md-6 col-sm-3 salads"><h2>Salads</h2>
+<li>$70. Caesar Salad </li>
+<li>$57. Slizzy Salad </li>
+<li>$68. Maruchii Salad</li></div>
+
+<div class="col-lg-2 col-md-6 col-sm-3 sandwiches"><h2>Sandwiches</h2>
+<li>$90. Garry Sandwhich </li>
+<li>$23. Eric Sandwhich </li>
+<li>$80. Armenia Sandwhich </li></div>
 
 </body>
 </html>
