--- a/restaurant.html
+++ b/restaurant.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name"viewport" content="width=device-width, initial-scale=1">
 	<title>Piggle's Pizza Joint</title>
+	<link href="bootstraptemplate/css/bootstrap.css" rel="stylesheet">
 	<link href="css/restaurant.css" type="text/css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
 </head>
 <body>
+<div class="container">
 <div class="pigglemaster">
 
 <h1 class="pigglehead col-lg-4 col-md-6 col-sm-3">Piggle's Pizza Joint</h1>
@@ -14,19 +17,22 @@
 <img src=images/Pizza.jpg width="500" height="500">
 </div>
 
-
+<div id="overall">
 <div class="box">
-<div class="col-lg-4 col-md-6 col-sm-3"><a href="menu.html"><p class="one">Menu<img class="img1" src="images/pepper.jpg"></p></a></div>
+<div class="col-xl-4 col-lg-4 col-md-6 col-sm-3 col-xs-12">
+
+<a href="menu.html"><p class="one">Menu<img class="img1" src="images/pepper.jpg"></p></a></div>
 </div>
 
 <div class="box2">
-<div class="col-lg-4 col-md-6 col-sm-3"><a href="aboutus.html"><p class="two">About Us<img class="img2" src="images/aboutus.jpg"></p></a></div>
+<a href="aboutus.html"><p class="two">About Us<img class="img2" src="images/aboutus.jpg"></p></a></div>
 </div>
 
 <div class="box3">
-<div class="col-lg-4 col-md-6 col-sm-3"><a href="https://www.google.com/maps/place/Mojave+Desert/@35.0110087,-115.4739988,17z/data=!4m5!3m4!1s0x80cf61476bd798cf:0xca4c53e5430da34!8m2!3d35.0109911!4d-115.4733551"><p class="three">Find us on Google Maps!<img class="img3" src="images/findus.jpg"></p></a></div>
-</div>
 
+<a href="https://www.google.com/maps/place/Mojave+Desert/@35.0110087,-115.4739988,17z/data=!4m5!3m4!1s0x80cf61476bd798cf:0xca4c53e5430da34!8m2!3d35.0109911!4d-115.4733551"><p class="three">Find us on Google Maps!<img class="img3" src="images/findus.jpg"></p></a></div>
+</div>
+</div>
 
 
 </div>
