--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,8 @@
 
 <div class="col-lg-4 col-md-6 col-sm-3"><a href="restaurant.html"><p>Restaurant</p></a></div>
 
+<div class="col-lg-4 col-md-6 col-sm-3"><a href="startup.html"><p>Startup</p></a></div>
+
 <div class="col-lg-4 col-md-6 col-sm-3"><p>Class Demos:</p>
 <list>
 <a href="corner.html"<li>corners</li></a>
